added login component, added apiservice, added reset css

--- a/przepisnik/src/app/app.component.scss
+++ b/przepisnik/src/app/app.component.scss
@@ -1,4 +1,10 @@
-.iconCoffee{
-  color: red;
-  font-size: 3rem;
+// .iconCoffee{
+//   color: red;
+//   font-size: 3rem;
+// }
+
+body {
+  background-color: blue;
+  width: 100vw;
+  height: 100vh;
 }
