added frontend validation for form

--- a/przepisnik/src/app/app.component.html
+++ b/przepisnik/src/app/app.component.html
@@ -1,2 +1,2 @@
-<fa-icon class="iconCoffee" [icon]="faCoffee"></fa-icon>
+<!-- <fa-icon class="iconCoffee" [icon]="faCoffee"></fa-icon> -->
 <router-outlet></router-outlet>
