--- a/przepisnik/src/app/modalrecipe/modalrecipe.component.html
+++ b/przepisnik/src/app/modalrecipe/modalrecipe.component.html
@@ -6,7 +6,7 @@
     <h5 class="modal_title" *ngIf="recipe">{{recipe.name}}</h5>
     <img class="modal_image" src={{recipe.imgUrl}} alt={{recipe.name}}>
     <ul class="modal_ingredients-List">
-      <li *ngFor="let ingredient of recipe.ingriedients" class="modal_ingredients-item">{{ingredient.name}} w ilości {{ingredient.value}}</li>
+      <li *ngFor="let ingredient of recipe.ingriedients" class="modal_ingredients-item">{{ingredient.nameingredient}} w ilości {{ingredient}}</li>
     </ul>
   </div>
 </div>
