--- a/przepisnik/src/app/autor/autor.component.scss
+++ b/przepisnik/src/app/autor/autor.component.scss
@@ -26,5 +26,13 @@
     -webkit-box-shadow: 0px 0px 8px 0px rgba(66, 68, 90, 1);
     -moz-box-shadow: 0px 0px 8px 0px rgba(66, 68, 90, 1);
     box-shadow: 0px 0px 8px 0px rgba(66, 68, 90, 1);
+    .autor_recipes-form{
+      height: 90%;
+      width: 90%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
   }
 }
