--- a/przepisnik/src/app/header/header.component.scss
+++ b/przepisnik/src/app/header/header.component.scss
@@ -13,6 +13,7 @@
   // box-shadow: 0px 78px 31px 25px rgba(66, 68, 90, 1);
   // box-shadow: rgb(0 0 0 / 20%) 0px 2px 6px 2px;
   z-index: 1;
+  position: relative;
   .header_heading {
     color: #edeee9;
     font-size: 2rem;
